--- a/nyuadCourseReview/Base.lproj/Main.storyboard
+++ b/nyuadCourseReview/Base.lproj/Main.storyboard
@@ -202,10 +202,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sle-Az-NtO">
-                                <rect key="frame" x="16" y="20" width="343" height="40"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="40"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="0Fa-cW-1Rn">
-                                        <rect key="frame" x="8" y="8" width="327" height="7"/>
+                                        <rect key="frame" x="8" y="8" width="359" height="7"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1H-be-TxK">
                                                 <rect key="frame" x="0.0" y="0.0" width="67" height="7"/>
@@ -215,7 +215,7 @@
                                                 </state>
                                             </button>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xm0-1g-fAu">
-                                                <rect key="frame" x="96.5" y="0.0" width="136" height="7"/>
+                                                <rect key="frame" x="112.5" y="0.0" width="136" height="7"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NJV-Vn-dOT">
                                                         <rect key="frame" x="0.0" y="0.0" width="129" height="7"/>
@@ -238,7 +238,7 @@
                                                 </constraints>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ehz-Rh-CRN">
-                                                <rect key="frame" x="264" y="0.0" width="63" height="7"/>
+                                                <rect key="frame" x="296" y="0.0" width="63" height="7"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
                                                 <state key="normal" title="Add review">
                                                     <color key="titleColor" red="0.40000000000000002" green="0.44705882349999998" blue="0.47058823529999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -297,13 +297,13 @@
                                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="oUP-hL-EJX">
                                                                             <rect key="frame" x="-5" y="10" width="226" height="114"/>
                                                                             <subviews>
-                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Needs more reviews " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="tB5-HM-Wbp">
+                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Needs more reviews " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="tB5-HM-Wbp">
                                                                                     <rect key="frame" x="0.0" y="0.0" width="226" height="44"/>
                                                                                     <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="32"/>
                                                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
-                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="79Z-Kc-RDh">
+                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="79Z-Kc-RDh">
                                                                                     <rect key="frame" x="0.0" y="59" width="226" height="20"/>
                                                                                     <constraints>
                                                                                         <constraint firstAttribute="height" constant="20" id="lnp-aa-NvS"/>
@@ -312,7 +312,7 @@
                                                                                     <color key="textColor" red="0.40000000000000002" green="0.44705882349999998" blue="0.47058823529999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
-                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="lDl-5P-Thr">
+                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="lDl-5P-Thr">
                                                                                     <rect key="frame" x="0.0" y="94" width="226" height="20"/>
                                                                                     <constraints>
                                                                                         <constraint firstAttribute="height" constant="20" id="0WV-7d-fWy"/>
@@ -366,6 +366,13 @@
                                                                 <constraint firstItem="oUP-hL-EJX" firstAttribute="bottom" secondItem="YW0-nP-r8q" secondAttribute="bottom" constant="-15" id="xfQ-MR-DCx"/>
                                                             </constraints>
                                                         </stackView>
+                                                        <textView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="There are no reviews yet for this course, let's change that together by leaving a review..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="q8f-7d-602">
+                                                            <rect key="frame" x="25" y="61" width="313" height="138"/>
+                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
+                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                        </textView>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eWQ-2d-Pkz">
                                                             <rect key="frame" x="107" y="207" width="150" height="35"/>
                                                             <constraints>
@@ -387,17 +394,21 @@
                                                     </subviews>
                                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="q8f-7d-602" secondAttribute="trailing" constant="25" id="1Zk-Yg-YzD"/>
                                                         <constraint firstItem="oUP-hL-EJX" firstAttribute="leading" secondItem="1Gz-yi-bAg" secondAttribute="leading" id="1pw-J5-gKS"/>
                                                         <constraint firstAttribute="trailing" secondItem="60w-dv-Lsv" secondAttribute="trailing" constant="9" id="5nz-cq-rnz"/>
                                                         <constraint firstItem="60w-dv-Lsv" firstAttribute="leading" secondItem="51O-mK-ARz" secondAttribute="leading" constant="8" id="Ejy-HU-9si"/>
                                                         <constraint firstAttribute="bottom" secondItem="RpU-AS-B3n" secondAttribute="bottom" constant="35" id="GAF-2y-yiq"/>
                                                         <constraint firstItem="eWQ-2d-Pkz" firstAttribute="centerX" secondItem="51O-mK-ARz" secondAttribute="centerX" id="QP1-yT-GKT"/>
+                                                        <constraint firstItem="eWQ-2d-Pkz" firstAttribute="top" secondItem="q8f-7d-602" secondAttribute="bottom" constant="8" id="T6t-pS-hzA"/>
                                                         <constraint firstAttribute="trailing" secondItem="RpU-AS-B3n" secondAttribute="trailing" id="TR2-S9-cf4"/>
                                                         <constraint firstItem="RpU-AS-B3n" firstAttribute="top" secondItem="1Gz-yi-bAg" secondAttribute="bottom" constant="7.5" id="cbU-qQ-jHo"/>
                                                         <constraint firstItem="1Gz-yi-bAg" firstAttribute="top" secondItem="60w-dv-Lsv" secondAttribute="bottom" constant="-4" id="eUy-vX-Cck"/>
+                                                        <constraint firstItem="q8f-7d-602" firstAttribute="top" secondItem="1Gz-yi-bAg" secondAttribute="bottom" constant="8" id="l4d-W8-Dg7"/>
                                                         <constraint firstAttribute="bottom" secondItem="eWQ-2d-Pkz" secondAttribute="bottom" constant="8" id="me4-f7-hX9"/>
                                                         <constraint firstItem="60w-dv-Lsv" firstAttribute="top" secondItem="51O-mK-ARz" secondAttribute="top" constant="8" id="nYj-tR-YLx"/>
                                                         <constraint firstItem="1Gz-yi-bAg" firstAttribute="leading" secondItem="60w-dv-Lsv" secondAttribute="leading" id="oD2-RV-5lc"/>
+                                                        <constraint firstItem="q8f-7d-602" firstAttribute="leading" secondItem="51O-mK-ARz" secondAttribute="leading" constant="25" id="u5s-3R-6Be"/>
                                                     </constraints>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="boolean" keyPath="btnDesign" value="NO"/>
@@ -413,7 +424,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="circleImg" destination="YW0-nP-r8q" id="VFI-r6-hmn"/>
                                             <outlet property="courseLbl" destination="60w-dv-Lsv" id="Y35-wZ-yn8"/>
+                                            <outlet property="noReviewTxt" destination="q8f-7d-602" id="s9D-V3-upO"/>
                                             <outlet property="profLbl" destination="1Gz-yi-bAg" id="dQH-Nx-Onw"/>
                                             <outlet property="quote0" destination="tB5-HM-Wbp" id="Kb6-1A-ixG"/>
                                             <outlet property="quote1" destination="79Z-Kc-RDh" id="fbx-cb-dDA"/>
@@ -429,11 +442,11 @@
                         <constraints>
                             <constraint firstItem="Sle-Az-NtO" firstAttribute="top" secondItem="TkX-eR-OBh" secondAttribute="bottom" id="11I-6h-pdK"/>
                             <constraint firstItem="Gfe-QX-TRE" firstAttribute="top" secondItem="omD-EQ-vDG" secondAttribute="bottom" id="1O4-9M-gan"/>
+                            <constraint firstAttribute="trailing" secondItem="Sle-Az-NtO" secondAttribute="trailing" id="69Z-HZ-yxD"/>
                             <constraint firstItem="omD-EQ-vDG" firstAttribute="leading" secondItem="XR1-Ly-dHe" secondAttribute="leading" id="D4u-hr-zMP"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Sle-Az-NtO" secondAttribute="trailing" id="MfD-NU-GyB"/>
                             <constraint firstAttribute="trailing" secondItem="omD-EQ-vDG" secondAttribute="trailing" id="W6A-c6-jua"/>
                             <constraint firstItem="omD-EQ-vDG" firstAttribute="top" secondItem="Sle-Az-NtO" secondAttribute="bottom" id="ddJ-tj-d8q"/>
-                            <constraint firstItem="Sle-Az-NtO" firstAttribute="leading" secondItem="XR1-Ly-dHe" secondAttribute="leadingMargin" id="pce-VV-feG"/>
+                            <constraint firstItem="Sle-Az-NtO" firstAttribute="leading" secondItem="XR1-Ly-dHe" secondAttribute="leading" id="m5M-a9-Qjb"/>
                         </constraints>
                     </view>
                     <connections>
@@ -443,7 +456,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ipv-yu-mi0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2018.4000000000001" y="19.340329835082461"/>
+            <point key="canvasLocation" x="1756" y="36.431784107946029"/>
         </scene>
         <!--Write Review-->
         <scene sceneID="b1p-dH-pJ5">
@@ -776,6 +789,7 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="submitBtnPressed:" destination="f0I-d8-5wI" eventType="touchUpInside" id="OJa-3D-US9"/>
+                                    <segue destination="7tu-6K-j8C" kind="show" id="0QL-xc-L0Z"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -814,7 +828,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hvM-Mh-YTG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2880" y="15"/>
+            <point key="canvasLocation" x="2543" y="-706"/>
         </scene>
     </scenes>
     <resources>
@@ -825,6 +839,6 @@
         <image name="nyuad logo" width="375" height="142"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="YyO-98-XXD"/>
+        <segue reference="0QL-xc-L0Z"/>
     </inferredMetricsTieBreakers>
 </document>
