--- a/nyuadCourseReview/Base.lproj/Main.storyboard
+++ b/nyuadCourseReview/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="H4E-kA-yb2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -214,6 +214,9 @@
                                                 <state key="normal" title="Add Course">
                                                     <color key="titleColor" red="0.40000000000000002" green="0.44705882349999998" blue="0.47058823529999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <segue destination="H4E-kA-yb2" kind="show" id="GcH-YL-usf"/>
+                                                </connections>
                                             </button>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xm0-1g-fAu">
                                                 <rect key="frame" x="85" y="0.0" width="136" height="7"/>
@@ -504,9 +507,6 @@
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
-                                                <connections>
-                                                    <action selector="beginEditing:" destination="H4E-kA-yb2" eventType="editingDidEnd" id="BRj-wE-GU6"/>
-                                                </connections>
                                             </textField>
                                         </subviews>
                                     </stackView>
@@ -635,14 +635,13 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="categorieLbl" destination="neO-nN-1pZ" id="Ktu-D2-de2"/>
                         <outlet property="categoriePckr" destination="feI-Ub-Ojg" id="Q3G-Mu-BHu"/>
-                        <outlet property="inputTextView" destination="6HE-IF-dRD" id="KhB-ho-plF"/>
+                        <outlet property="nameTxt" destination="6HE-IF-dRD" id="hc6-uD-WQ4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e5f-nB-W4B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1755" y="732.04225352112678"/>
+            <point key="canvasLocation" x="1551" y="833"/>
         </scene>
         <!--View CourseVC-->
         <scene sceneID="ftC-Mw-hfM">
